Generate Pelican site

--- a/tom-lazar.html
+++ b/tom-lazar.html
@@ -66,7 +66,7 @@
         <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
-            <li><span><i class="fa fa-calendar"></i>&nbsp; Sun 30 October 2016</span></li>
+            <li><span><i class="fa fa-calendar"></i>&nbsp; ned 30 oktober 2016</span></li>
             <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="https://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
             <li>
                 <span>
@@ -150,15 +150,13 @@
                     <div class="small-12 medium-4  large-12 columns link-list">
                         <h5 class='text-center'>Sponsors &amp; Partners</h5>
                         <ul class="inline-center">
-                            <li><a href="http://www.stevepiercy.com/">Steve Piercy</a></li>
+                            <li><a href="https://www.python.org/psf/">Python Software Foundation</a></li>
                             <li><a href="http://www.termitnjak.com/">Termitnjak d.o.o.</a></li>
                             <li><a href="https://www.domenkozar.com/">Domen Kožar</a></li>
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
-                        <img style="margin: 0 auto; display: block" src="/theme/images/jetbrains.png" />
-                        <img style="margin: 0 auto; display: block" src="/theme/images/psf.png" />
                     </div>
 
                     <div class="small-12 medium-4  large-12 columns link-list" style="text-align: center">
