--- a/categories.html
+++ b/categories.html
@@ -198,7 +198,7 @@
             <div class="image-pane main-content" style="background: url('/theme/images/backdrop.jpg'); background-size:cover; background-position: right;">
                 <div class="row">
                     <div class="small-12 medium-4 large-12 columns">
-                        <h5 class='text-center'>About</h5>
+                        <h3 class='text-center'>About</h3>
                         <div class="about-me">
                             <div class="small-12 columns text-justify">
                                 DragonSprint is a week-long sprint on Pyramid. The sprint takes place in Ljubljana, Slovenia, EU in the first week of December (5th to 9th). The main two sprint topics are <i>Pyramid 2.0</i> and Pyramid for Newcomers. <br /><br />The sprint is <b>free</b> to attend for everyone! <a href="mailto:info@dragonsprint.com">Contact us</a> if you need help with covering your travel expenses.
@@ -221,6 +221,7 @@
                             <li><a href="http://www.termitnjak.com/">Termitnjak d.o.o.</a></li>
                             <li><a href="https://www.domenkozar.com/">Domen Kožar</a></li>
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
+                            <li><a href="http://p2l.tech">P2L Tech</a></li>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
