Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -234,6 +234,11 @@
                               <img src="/theme/images/plone.png" />
                             </a>
                           </li>
+                          <li>
+                            <a href="https://jazkarta.com/">
+                              <img src="/theme/images/jazkarta.png" />
+                            </a>
+                          </li>
                         </ul>
                     </div>
 
