--- a/livia-dobai.html
+++ b/livia-dobai.html
@@ -177,6 +177,11 @@ Tags: Django, Javascript, Front-end</p>
                               <img src="/theme/images/plone.png" />
                             </a>
                           </li>
+                          <li>
+                            <a href="https://jazkarta.com/">
+                              <img src="/theme/images/jazkarta.png" />
+                            </a>
+                          </li>
                         </ul>
                     </div>
 
