--- a/steve-piercy.html
+++ b/steve-piercy.html
@@ -181,6 +181,11 @@ he will be available remotely to assist.</p>
                               <img src="/theme/images/plone.png" />
                             </a>
                           </li>
+                          <li>
+                            <a href="https://jazkarta.com/">
+                              <img src="/theme/images/jazkarta.png" />
+                            </a>
+                          </li>
                         </ul>
                     </div>
 
