--- a/jan-likar.html
+++ b/jan-likar.html
@@ -177,6 +177,11 @@ Likes OSS, crypto and fiddling with hardware.</p>
                               <img src="/theme/images/plone.png" />
                             </a>
                           </li>
+                          <li>
+                            <a href="https://jazkarta.com/">
+                              <img src="/theme/images/jazkarta.png" />
+                            </a>
+                          </li>
                         </ul>
                     </div>
 
