--- a/malthe-borch.html
+++ b/malthe-borch.html
@@ -177,6 +177,11 @@ Tags: Pyramid, C, WebAssembly, LLVM, Databases</p>
                               <img src="/theme/images/plone.png" />
                             </a>
                           </li>
+                          <li>
+                            <a href="https://jazkarta.com/">
+                              <img src="/theme/images/jazkarta.png" />
+                            </a>
+                          </li>
                         </ul>
                     </div>
 
