--- a/nejc-zupan.html
+++ b/nejc-zupan.html
@@ -179,6 +179,11 @@
                               <img src="/theme/images/plone.png" />
                             </a>
                           </li>
+                          <li>
+                            <a href="https://jazkarta.com/">
+                              <img src="/theme/images/jazkarta.png" />
+                            </a>
+                          </li>
                         </ul>
                     </div>
 
