--- a/tags.html
+++ b/tags.html
@@ -158,6 +158,11 @@
                               <img src="/theme/images/plone.png" />
                             </a>
                           </li>
+                          <li>
+                            <a href="https://jazkarta.com/">
+                              <img src="/theme/images/jazkarta.png" />
+                            </a>
+                          </li>
                         </ul>
                     </div>
 
