Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -26,7 +26,7 @@
 
 
     <body>
-        <div class="master-row">
+        <div class="master-row" style="background: url('/theme/images/backdrop.jpg'); background-size:cover; background-position: right; background-attachment: fixed;">
 
             <div class="content-pane main-content">
                 <nav class="top-bar" data-topbar role="navigation">
@@ -194,7 +194,7 @@
 </div>                </footer>
             </div>
 
-            <div class="image-pane main-content" style="background: url('/theme/images/backdrop.jpg'); background-size:cover; background-position: right;">
+            <div class="image-pane main-content">
                 <div class="row">
                     <div class="small-12 medium-4 large-12 columns">
                         <h3 class='text-center'>About</h3>
@@ -214,38 +214,42 @@
                     </div>
 
                     <div class="small-12 medium-4  large-12 columns link-list">
-                        <h5 class='text-center'>Sponsors &amp; Partners</h5>
+                        <h3 class='text-center'>Sponsors &amp; Partners</h3>
                         <ul class="inline-center">
                             <li><a href="http://www.stevepiercy.com/">Steve Piercy</a></li>
-                            <li><a href="http://www.termitnjak.com/">Termitnjak d.o.o.</a></li>
                             <li><a href="https://www.domenkozar.com/">Domen Kožar</a></li>
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
                         <ul id="logo-list" class="inline-center">
                           <li>
-                            <a href="https://www.jetbrains.com/">
+                            <a target="_blank" href="https://www.jetbrains.com/">
                               <img src="/theme/images/jetbrains.png" />
                             </a>
                           </li>
                           <li>
-                            <a href="https://www.python.org/psf/">
+                            <a target="_blank" href="https://www.python.org/psf/">
                               <img src="/theme/images/psf.png" />
                             </a>
                           </li>
                           <li>
-                            <a href="http://p2l.tech/">
+                            <a target="_blank" href="http://p2l.tech/">
                               <img src="/theme/images/p2ltech.png" />
                             </a>
                           </li>
                           <li>
-                            <a href="https://plone.org/">
+                            <a target="_blank" href="https://plone.org/">
                               <img src="/theme/images/plone.png" />
                             </a>
                           </li>
                           <li>
-                            <a href="https://jazkarta.com/">
+                            <a target="_blank" href="https://jazkarta.com/">
                               <img src="/theme/images/jazkarta.png" />
+                            </a>
+                          </li>
+                          <li>
+                            <a target="_blank" href="https://termitnjak.com/">
+                              <img src="/theme/images/termitnjak.png" />
                             </a>
                           </li>
                         </ul>
