Generate Pelican site

--- a/jan-likar.html
+++ b/jan-likar.html
@@ -134,7 +134,7 @@ Likes OSS, crypto and fiddling with hardware.</p>
                         <h3 class='text-center'>About</h3>
                         <div class="about-me">
                             <div class="small-12 columns text-justify">
-                                DragonSprint is a week-long sprint on Pyramid. The sprint takes place in Ljubljana, Slovenia, EU in the first week of December (5th to 9th). The main two sprint topics are <i>Pyramid 2.0</i> and Pyramid for Newcomers. <br /><br />The sprint is <b>free</b> to attend for everyone! <a href="mailto:info@dragonsprint.com">Contact us</a> if you need help with covering your travel expenses.
+                                DragonSprint is a week-long sprint on Pyramid. The sprint takes place in Ljubljana, Slovenia, EU in the first week of December (5th to 9th). The main two sprint topics are <i>Pyramid 2.0</i> and Pyramid for Newcomers.
                             </div>
                             <div class="small-12 columns">
                                 <ul class="inline-center social-list">
@@ -152,7 +152,6 @@ Likes OSS, crypto and fiddling with hardware.</p>
                         <ul class="inline-center">
                             <li><a href="http://www.stevepiercy.com/">Steve Piercy</a></li>
                             <li><a href="https://www.domenkozar.com/">Domen Kožar</a></li>
-                            <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
                         <ul id="logo-list" class="inline-center">
@@ -184,6 +183,11 @@ Likes OSS, crypto and fiddling with hardware.</p>
                           <li>
                             <a target="_blank" href="https://termitnjak.com/">
                               <img src="/theme/images/termitnjak.png" />
+                            </a>
+                          </li>
+                          <li>
+                            <a target="_blank" href="http://www.niteoweb.com/">
+                              <img src="/theme/images/niteoweb.png" />
                             </a>
                           </li>
                         </ul>
