--- a/nejc-zupan.html
+++ b/nejc-zupan.html
@@ -67,7 +67,7 @@
         <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
-            <li><span><i class="fa fa-calendar"></i>&nbsp; Thu 20 October 2016</span></li>
+            <li><span><i class="fa fa-calendar"></i>&nbsp; čet 20 oktober 2016</span></li>
             <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="https://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
             <li>
                 <span>
