--- a/martin-frlin.html
+++ b/martin-frlin.html
@@ -66,7 +66,7 @@
         <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
-            <li><span><i class="fa fa-calendar"></i>&nbsp; pon 05 december 2016</span></li>
+            <li><span><i class="fa fa-calendar"></i>&nbsp; Mon 05 December 2016</span></li>
             <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="https://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
             <li>
                 <span>
