--- a/jernej-urankar.html
+++ b/jernej-urankar.html
@@ -6,10 +6,11 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Ljubljana Pyramid Hackers" />
-        <title>Tags</title>
+        <title>Jernej Urankar</title>
 
-        <meta name="description" content="5 to 9 December 2016, set in the beautiful Ljubljana, Slovenia" />
-        <meta name="keywords" content="Blog "/>
+<meta name="description" content="&lt;p class=&#34;first last&#34;&gt;Python&lt;/p&gt;
+" />
+<meta name="keywords" content=" sprinters  "/>
 
         <!--[if !IE 7]>
         <style type="text/css">
@@ -21,6 +22,7 @@
         <script src="/theme/js/modernizr.js"></script>
 
         <link href="https://dragonsprint.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A full week of sprinting on Pyramid Full Atom Feed" />
+        <link href="https://dragonsprint.com/feeds/sprinters.atom.xml" type="application/atom+xml" rel="alternate" title="A full week of sprinting on Pyramid Categories Atom Feed" />
 
     </head>
 
@@ -46,7 +48,7 @@
                             <li><a href="https://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
-                            <li><a href="https://dragonsprint.com/category/sprinters.html">Sprinters</a></li>
+                            <li class="active"><a href="https://dragonsprint.com/category/sprinters.html">Sprinters</a></li>
                         </ul>
                     </section>
                 </nav>
@@ -61,11 +63,24 @@
                 <div id="contents">
 <div class="row">
     <div class="small-12 columns article">
-        <h2>Tags</h2>
-        <section>
-            <p class='tag-page'>
-                <a href="https://dragonsprint.com/tag/sprinters.html"><span class="label">sprinters&nbsp;&nbsp;<span class="label round secondary">21</span></span></a>
-            </p>    
+        <h2>Jernej Urankar</h2>
+        <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
+    <div class="small-12 columns">
+        <ul class="inline-list">
+            <li><span><i class="fa fa-calendar"></i>&nbsp; Tue 06 December 2016</span></li>
+            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="https://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
+            <li>
+                <span>
+                    <i class="fa fa-tags"></i>&nbsp;
+                    <a href="https://dragonsprint.com/tag/sprinters.html"><span class="label">sprinters</span></a>
+                </span>
+            </li>
+        </ul>
+    </div>
+</div>
+        <section class="article">
+            <p>Python Enthusiast.</p>
+    
         </section>
     </div>
 </div>
